--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=4000
-MONGO_URL="mongodb+srv://thomas:thomas1@cluster0.qzul33p.mongodb.net/sa_project?retryWrites=true&w=majority"
-# MONGO_URL="mongodb://localhost:27017/sa_project"
+# MONGO_URL="mongodb+srv://thomas:thomas1@cluster0.qzul33p.mongodb.net/sa_project?retryWrites=true&w=majority"
+MONGO_URL="mongodb://0.0.0.0:27017/sa_project"
 SECRET="SLDLSKFSNDFLNS"
